--- a/venagn-ink.html
+++ b/venagn-ink.html
@@ -9,7 +9,19 @@
 </head>
 
 <body>
-    
+    <header > 
+        <nav>
+            <div id="div-1" class="tête">
+                <ul>
+                    <li> artists </li>
+                    <li> gallery </li>
+                    <li> INK'D. </li>
+                    <li> blog </li>
+                    <li> contact </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     
 </body>
 </html>
