--- a/venagn-ink.html
+++ b/venagn-ink.html
@@ -11,17 +11,26 @@
 <body>
     <header > 
         <nav>
-            <div id="div-1" class="tête">
+            <img src="fb.png" alt="Facebook">
+            <div id="div-1">
                 <ul>
                     <li> artists </li>
                     <li> gallery </li>
-                    <li> INK'D. </li>
+                    <li><img src="logo.png" alt="ink'd."></li>
                     <li> blog </li>
                     <li> contact </li>
                 </ul>
             </div>
         </nav>
     </header>
+    <img src="tattoo.jpg" alt="blackworktattoo">
+
+    <main>
+        <div id="div-2">
+            <img src="twittube.png" alt="Twitter-Youtube">
+
+        </div>
+    </main>
     
 </body>
 </html>
