--- a/vegan-ink.html
+++ b/vegan-ink.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
     </header>
-    <img src="tattoo.jpg" alt="blackworktattoo">
+    s<img src="tattoo.jpg" alt="blackworktattoo">
 
     <main>
         <div id="div-2">
