--- a/vegan-ink.html
+++ b/vegan-ink.html
@@ -11,7 +11,7 @@
 <body>
     <header > 
         <nav>
-            <img src="fb.png" alt="Facebook">
+            
             <div id="div-1">
                 <ul>
                     <li> artists </li>
@@ -20,16 +20,18 @@
                     <li> blog </li>
                     <li> contact </li>
                 </ul>
+                <img src="fb.png" alt="Facebook">
             </div>
         </nav>
     </header>
-    s<img src="tattoo.jpg" alt="blackworktattoo">
-
+    <div id="div-2">
+        <img src="twittube.png" img class="twittube" alt="Twitter-Youtube">
+        <div class="contenant">
+        <img img class=tattoo src="tattoo.jpg" alt="blackworktattoo">
+        <div class="texte_centrer"><h1>VEGAN TATTOO STUDIO</h1></div>
+</div>
+    </div>
     <main>
-        <div id="div-2">
-            <img src="twittube.png" alt="Twitter-Youtube">
-
-        </div>
     </main>
     
 </body>
